force-app/main/default/objects/Product2/fields/Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Percent__c</fullName>
    <label>Adjustment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>