force-app/main/default/objects/Product2/fields/Award_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>Award_Image_ID__c</fullName>
    <label>Award Image ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>