force-app/main/default/objects/Product2/fields/Cloud_Support__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Support__c</fullName>
    <label>Memory</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>