force-app/main/default/objects/Product2/fields/Coupon_Adjustment_Price__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Adjustment_Price__c</fullName>
    <label>Coupon Adjustment Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>