force-app/main/default/objects/Product2/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>