force-app/main/default/objects/Product2/fields/Feature_1__c.field-meta.xml
<CustomField>
    <fullName>Feature_1__c</fullName>
    <label>Feature 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>