force-app/main/default/objects/Product2/fields/Feature_2__c.field-meta.xml
<CustomField>
    <fullName>Feature_2__c</fullName>
    <label>Feature 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>