force-app/main/default/objects/Product2/fields/Feature_3__c.field-meta.xml
<CustomField>
    <fullName>Feature_3__c</fullName>
    <label>Feature 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>