force-app/main/default/objects/Product2/fields/Featured_Product__c.field-meta.xml
<CustomField>
    <fullName>Featured_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Featured Product</label>
    <type>Checkbox</type>
</CustomField>