force-app/main/default/objects/Product2/fields/Final_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount__c</fullName>
    <formula>IF(NOT(ISBLANK(Adjustment_Amount__c)) &amp;&amp; Adjustment_Amount__c &lt;&gt; 0, Adjustment_Amount__c,
IF(NOT(ISBLANK(Adjustment_Percent__c)) &amp;&amp; Adjustment_Percent__c &lt;&gt; 0, Adjustment_Percent__c *100, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>