force-app/main/default/objects/Product2/fields/Final_Discount_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount_Coupon__c</fullName>
    <formula>IF(NOT(ISBLANK( Coupon_Adjustment_Price__c )) &amp;&amp; Coupon_Adjustment_Price__c &lt;&gt; 0, Coupon_Adjustment_Price__c,
IF(NOT(ISBLANK( Coupon_Adjustment_Percent__c )) &amp;&amp; Coupon_Adjustment_Percent__c &lt;&gt; 0, Coupon_Adjustment_Percent__c *100, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Discount Coupon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>