force-app/main/default/objects/Product2/fields/Final_price__c.field-meta.xml
<CustomField>
    <fullName>Final_price__c</fullName>
    <label>Final price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>