force-app/main/default/objects/Product2/fields/isCouponCode__c.field-meta.xml
<CustomField>
    <fullName>isCouponCode__c</fullName>
    <formula>ISBLANK(Coupon_Code__c) = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCouponCode</label>
    <type>Checkbox</type>
</CustomField>