force-app/main/default/objects/Product2/fields/isDiscounted__c.field-meta.xml
<CustomField>
    <fullName>isDiscounted__c</fullName>
    <formula>NOT( Adjustment_Percent__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDiscountedPercent</label>
    <type>Checkbox</type>
</CustomField>