force-app/main/default/objects/Product2/fields/isWishlistItem_Quest__c.field-meta.xml
<CustomField>
    <fullName>isWishlistItem_Quest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWishlistItem Quest</label>
    <type>Checkbox</type>
</CustomField>