force-app/main/default/objects/Product2/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>