force-app/main/default/objects/Product2/fields/Quest_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Quest_Product_Model__c</fullName>
    <label>Quest Product Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>