force-app/main/default/objects/Product2/fields/Quest_Product_Type2__c.field-meta.xml
<CustomField>
    <fullName>Quest_Product_Type2__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONSULTING</fullName>
            </value>
            <value>
                <fullName>DOCUMENTATION</fullName>
            </value>
            <value>
                <fullName>HARDWARE</fullName>
            </value>
            <value>
                <fullName>LICENSE ONLY</fullName>
            </value>
            <value>
                <fullName>LICENSE/MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>LICENSE/PPM</fullName>
            </value>
            <value>
                <fullName>LICENSE SUB</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE ONLY</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE RENEWAL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PREPAID CONSULTING</fullName>
            </value>
            <value>
                <fullName>PREPAID INSTALLATION</fullName>
            </value>
            <value>
                <fullName>PREPAID PROJECT MGMT</fullName>
            </value>
            <value>
                <fullName>PREPAID TRAINING</fullName>
            </value>
            <value>
                <fullName>PROJECT MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>SAAS</fullName>
            </value>
            <value>
                <fullName>TERM LICENSE/MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>TRAINING</fullName>
            </value>
            <value>
                <fullName>SAAS/PROF SERVICES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>