force-app/main/default/objects/Product2/fields/SellingModel__c.field-meta.xml
<CustomField>
    <fullName>SellingModel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SellingModel</label>
    <type>Checkbox</type>
</CustomField>